<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/loginsend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="118dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/send_makeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hacer_pedido_ya"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="603dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="402dp"
        android:layout_height="408dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="187dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/todo_1"
        tools:ignore="MissingConstraints" />
=======
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecond"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/accederbut"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:background="@color/colorSecond3"
        android:text="ACCEDER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.193" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="86dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorSecond2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="243dp"
        android:layout_height="28dp"
        android:background="@android:color/background_light"
        android:text="INICIAR SESSION"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="338dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/background_light"
        android:drawableEnd="@drawable/ic_baseline_mail_24"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/background_light"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <View
        android:id="@+id/view2"
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:background="@color/colorSecond2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

>>>>>>> 283b6e08e7ac0464dc42738cd7e6020f9cbc2d65
</androidx.constraintlayout.widget.ConstraintLayout>